# armoriq-sdk-customer

./: .env.example  .gitignore  ALIGNMENT_REPORT.md  API_KEY_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_VERIFICATION.md  BANNER.md  CHANGELOG.md  DEVELOPMENT.md  FINAL_VERIFICATION.md  IMPLEMENTATION_REPORT.md  LICENSE  MANIFEST.in  MCP_PROTOCOL_TEST_RESULTS.md  ORGANIZATION_SUMMARY.md  PRODUCTION_VS_LOCAL.md  PROJECT_SUMMARY.md  PUBLISHING_GUIDE.md  QUICKSTART.md  README.md  TESTING_LAUNCH_GUIDE.md  TODO.md  UPDATE_SUMMARY.md  pyproject.toml  setup.py  setup.sh  test.sh  test_api_key_auth.py  test_api_key_validation.py  test_complete_customer_flow.py  test_customer_sdk.py  test_mcp_protocol_complete.py  test_sdk_complete_flow.py  verify_architecture.py
.github/workflows/: publish.yml
armoriq/: __init__.py  client.py  exceptions.py  models.py
armoriq_sdk/: __init__.py  _build_env.py  cli.py  cli_auth.py  client.py  config.py  credentials.py  crypto_verify.py  exceptions.py  models.py  plan_builder.py  session.py  token_usage.py
armoriq_sdk/integrations/: __init__.py  anthropic.py  crewai.py  google_adk.py  langchain.py  openai.py  strands.py
docs/: IAM_DELEGATION_GUIDE.md  README.md
docs/architecture/: ARCHITECTURE_VERIFICATION.md  FLOW_DIAGRAM.md
docs/deployment/: PRODUCTION_DEPLOYMENT_GUIDE.md  QUICK_PUBLISH.md
docs/development-guide/: ArmorIQ Concepts.md  ArmorIQ SDK - API Reference.md  Getting Started with ArmorIQ SDK.md
docs/internal/: DOCUMENTATION_STRUCTURE.md
docs/reference/: QUICK_REFERENCE.md  SDK_CAPABILITIES.md
examples/: README.md  basic_agent.py  complete_workflow.py  crewai_integration.py  delegation_example.py  error_handling.py  loan_delegation_workflow.py  multi_mcp_agent.py  multi_tool.py  quickstart.py
scripts/: generate_api_key.py  publish.sh
tests/: README.md  __init__.py  conftest.py  test_adk_agent_attribution.py  test_cli.py  test_client.py  test_client_from_config.py  test_config.py  test_crewai_integration.py  test_crypto_verify.py  test_exceptions.py  test_keys_cli.py  test_models.py  test_plan_builder.py  test_retry_idempotency.py  test_session.py  test_strands_integration.py  test_token_usage.py
