[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "armoriq-sdk"
version = "0.2.2"
description = "ArmorIQ SDK - Build secure AI agents with cryptographic intent verification."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "ArmorIQ Team", email = "license@armoriq.io"}
]
keywords = ["armoriq", "sdk", "ai", "agents", "security", "verification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "black", "mypy"]

[project.urls]
Homepage = "https://armoriq.ai"
Documentation = "https://docs.armoriq.io"
"Source Code" = "https://github.com/armoriq/armoriq-sdk-python"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]
