[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "armoriq-sdk-dev"
version = "0.3.5"
description = "ArmorIQ SDK - Build secure AI agents with cryptographic intent verification."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
authors = [
    {name = "ArmorIQ Team", email = "license@armoriq.io"}
]
keywords = ["armoriq", "sdk", "ai", "agents", "security", "verification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "cryptography>=41.0.0",
    "PyYAML>=6.0",
]

[project.scripts]
armoriq = "armoriq_sdk.cli:main"
armoriq-cli = "armoriq_sdk.cli:main"

[project.optional-dependencies]
crewai     = ["crewai>=0.28.0"]
langchain  = ["langchain>=0.1.0"]
google-adk = ["google-adk>=1.0.0"]
openai     = ["openai>=1.0.0"]
anthropic  = ["anthropic>=0.20.0"]
dev        = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "black", "mypy"]
all        = [
    "crewai>=0.28.0",
    "langchain>=0.1.0",
    "google-adk>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
]

[project.urls]
Homepage = "https://armoriq.ai"
Documentation = "https://docs.armoriq.ai"
"Source Code" = "https://github.com/armoriq/armoriq-sdk-python"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]
